# Alertas_Idap

./: .gitignore  Anotações.md  Análise e Estratégia de Adaptação_ Mapa Dinâmico de Alertas.md  README.md  pyproject.toml  requirements.txt
.cache/: historico_alertas.json  ibge_es_municipios_api.json  state.json
.github/workflows/: deploy_site_only.yml  idap_daily_maps.yml
resources/: ibge_municipios.json  idap_rss_es_fake.xml
scripts/: build_dash2.py  build_dashboard.py  build_dashboard_data.py  idap_daily_maps.py  run_fake_idap_test.ps1  run_production.ps1
site/: dashboard.html  dashboard2.html  dashboard_data.json  dashboard_data2.json  imagens.html  index.html  painel_operacional_dash1.html  ultima_atualizacao.json
site/assets/css/: dashboard.css  dashboard2.css
site/assets/js/: dashboard.js  dashboard2.js  mapa_dinamico.js
site/data/: alertas_idap.geojson  es_municipios.geojson
