[project]
name = "alertas-idap"
version = "0.1.0"
description = ""
authors = [
    {name = "felipebgoncalves",email = "felipeb.goncalves@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geopandas (>=1.1.3,<2.0.0)",
    "matplotlib (>=3.10.9,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
