[project]
name = "alertas-idap"
version = "0.1.0"
description = "Monitoramento de alertas CAP do IDAP para o Espírito Santo"
authors = [
    { name = "felipebgoncalves", email = "felipeb.goncalves@hotmail.com" }
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "geopandas==0.14.4",
    "shapely==2.0.6",
    "pyogrio==0.7.2",
    "matplotlib==3.9.2",
    "pandas==2.2.2",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
